tests/compile-fail/integration__integration__mapfiles__intrinsic_with_mismatched_signature_in_core_map.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic Jmp(): missing jump offset ('o')
  ┌─ <mapfile-1>:3:3
  │
3 │ 3 Jmp()    # id of 'sprite'
  │   ^^^^^ intrinsic defined here
  │
  = the built-in signature for ANM opcode 3 is "n"


